--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Dec  3 17:05:02 2018</p>
+         Last Run: Mon Dec  3 18:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 03, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -31,38 +31,38 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Clear</td>
-                        <td>-9</td>
-                        <td>-14</td>
+                        <td>-8</td>
+                        <td>-12</td>
                         <td>0</td>
-                        <td>75</td>
+                        <td>73</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>W</td>
-                        <td>14</td>
+                        <td>15</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Clear</td>
                         <td>-10</td>
                         <td>-15</td>
-                        <td>1</td>
-                        <td>74</td>
+                        <td>0</td>
+                        <td>73</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>13</td>
+                        <td>5</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Clear</td>
                         <td>-10</td>
                         <td>-15</td>
-                        <td>3</td>
+                        <td>1</td>
                         <td>75</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>3</td>
+                        <td>4</td>
                      </tr>
                   </tbody>
                </table>
@@ -89,7 +89,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-14",
+                 "-12",
                  "-15",
                  "-15"
                ]
@@ -101,7 +101,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-9",
+                 "-8",
                  "-10",
                  "-10"
                ]
@@ -161,8 +161,8 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "0",
-                 "1",
-                 "3"
+                 "0",
+                 "1"
                ]
              },
              {
@@ -171,8 +171,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "75",
-                 "74",
+                 "73",
+                 "73",
                  "75"
                ]
              },
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "14",
-                 "13",
-                 "3"
+                 "15",
+                 "5",
+                 "4"
                ]
              }
            ]
@@ -225,7 +225,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Dec  3 17:05:02 2018</p>
+         Last Run: Mon Dec  3 18:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Dec 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -262,7 +262,7 @@
                         <td>-15</td>
                         <td>-20</td>
                         <td>7</td>
-                        <td>88</td>
+                        <td>87</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
@@ -388,7 +388,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "87",
-                 "88",
+                 "87",
                  "93"
                ]
              },
@@ -440,7 +440,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Dec  3 17:05:02 2018</p>
+         Last Run: Mon Dec  3 18:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 17 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 08, 2018 - 10:35AM til 11:35AM</H4>
                <table class="table table-striped">
@@ -462,26 +462,26 @@
                      <tr>
                         <td>10:00 AM</td>
                         <td>Partly Cloudy</td>
-                        <td>-7</td>
-                        <td>-12</td>
+                        <td>-6</td>
+                        <td>-10</td>
                         <td>1</td>
-                        <td>62</td>
+                        <td>61</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>30</td>
+                        <td>35</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Partly Cloudy</td>
                         <td>-5</td>
-                        <td>-10</td>
+                        <td>-9</td>
                         <td>1</td>
-                        <td>60</td>
+                        <td>59</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>WSW</td>
-                        <td>34</td>
+                        <td>39</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -489,11 +489,11 @@
                         <td>-3</td>
                         <td>-7</td>
                         <td>1</td>
-                        <td>56</td>
+                        <td>55</td>
                         <td>1</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>WSW</td>
-                        <td>40</td>
+                        <td>44</td>
                      </tr>
                   </tbody>
                </table>
@@ -520,8 +520,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-12",
                  "-10",
+                 "-9",
                  "-7"
                ]
              },
@@ -532,7 +532,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-7",
+                 "-6",
                  "-5",
                  "-3"
                ]
@@ -602,9 +602,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "62",
-                 "60",
-                 "56"
+                 "61",
+                 "59",
+                 "55"
                ]
              },
              {
@@ -613,9 +613,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "30",
-                 "34",
-                 "40"
+                 "35",
+                 "39",
+                 "44"
                ]
              }
            ]
@@ -655,7 +655,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Dec  3 17:05:02 2018</p>
+         Last Run: Mon Dec  3 18:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 09, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -676,27 +676,27 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>-2</td>
-                        <td>-6</td>
+                        <td>Mostly Cloudy</td>
+                        <td>-1</td>
+                        <td>-5</td>
                         <td>3</td>
-                        <td>65</td>
+                        <td>67</td>
                         <td>0</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>56</td>
+                        <td>61</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-1</td>
-                        <td>-5</td>
+                        <td>0</td>
+                        <td>-4</td>
                         <td>3</td>
-                        <td>62</td>
+                        <td>64</td>
                         <td>0</td>
                         <td>13</td>
                         <td>WSW</td>
-                        <td>53</td>
+                        <td>57</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -704,11 +704,11 @@
                         <td>0</td>
                         <td>-4</td>
                         <td>3</td>
-                        <td>60</td>
+                        <td>62</td>
                         <td>0</td>
                         <td>13</td>
                         <td>WSW</td>
-                        <td>49</td>
+                        <td>53</td>
                      </tr>
                   </tbody>
                </table>
@@ -735,8 +735,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-6",
                  "-5",
+                 "-4",
                  "-4"
                ]
              },
@@ -747,8 +747,8 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-2",
                  "-1",
+                 "0",
                  "0"
                ]
              }
@@ -817,9 +817,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "65",
-                 "62",
-                 "60"
+                 "67",
+                 "64",
+                 "62"
                ]
              },
              {
@@ -828,9 +828,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "56",
-                 "53",
-                 "49"
+                 "61",
+                 "57",
+                 "53"
                ]
              }
            ]
