--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Dec  3 19:05:02 2018</p>
+         Last Run: Mon Dec  3 20:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 03, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -30,39 +30,39 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Clear</td>
-                        <td>-8</td>
-                        <td>-12</td>
+                        <td>Partly Cloudy</td>
+                        <td>-7</td>
+                        <td>-7</td>
                         <td>0</td>
-                        <td>74</td>
+                        <td>75</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>5</td>
                         <td>W</td>
-                        <td>27</td>
+                        <td>35</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Clear</td>
                         <td>-8</td>
-                        <td>-12</td>
+                        <td>-11</td>
                         <td>0</td>
-                        <td>73</td>
+                        <td>74</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>6</td>
                         <td>W</td>
-                        <td>17</td>
+                        <td>24</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Clear</td>
-                        <td>-10</td>
-                        <td>-15</td>
+                        <td>-9</td>
+                        <td>-13</td>
                         <td>0</td>
-                        <td>75</td>
+                        <td>76</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>6</td>
                         <td>W</td>
-                        <td>4</td>
+                        <td>19</td>
                      </tr>
                   </tbody>
                </table>
@@ -89,9 +89,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-12",
-                 "-12",
-                 "-15"
+                 "-7",
+                 "-11",
+                 "-13"
                ]
              },
              {
@@ -101,9 +101,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
+                 "-7",
                  "-8",
-                 "-8",
-                 "-10"
+                 "-9"
                ]
              }
            ]
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "75",
                  "74",
-                 "73",
-                 "75"
+                 "76"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "27",
-                 "17",
-                 "4"
+                 "35",
+                 "24",
+                 "19"
                ]
              }
            ]
@@ -225,7 +225,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Dec  3 19:05:02 2018</p>
+         Last Run: Mon Dec  3 20:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Dec 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -250,7 +250,7 @@
                         <td>-14</td>
                         <td>-19</td>
                         <td>7</td>
-                        <td>87</td>
+                        <td>86</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
@@ -266,7 +266,7 @@
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
-                        <td>6</td>
+                        <td>5</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -387,7 +387,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "87",
+                 "86",
                  "87",
                  "93"
                ]
@@ -399,7 +399,7 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "6",
-                 "6",
+                 "5",
                  "5"
                ]
              }
@@ -440,7 +440,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Dec  3 19:05:02 2018</p>
+         Last Run: Mon Dec  3 20:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 17 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 08, 2018 - 10:35AM til 11:35AM</H4>
                <table class="table table-striped">
@@ -462,14 +462,14 @@
                      <tr>
                         <td>10:00 AM</td>
                         <td>Partly Cloudy</td>
-                        <td>-6</td>
-                        <td>-10</td>
+                        <td>-7</td>
+                        <td>-12</td>
                         <td>1</td>
                         <td>61</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>33</td>
+                        <td>32</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -481,7 +481,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>37</td>
+                        <td>36</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -489,11 +489,11 @@
                         <td>-3</td>
                         <td>-7</td>
                         <td>1</td>
-                        <td>54</td>
+                        <td>55</td>
                         <td>1</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>43</td>
+                        <td>42</td>
                      </tr>
                   </tbody>
                </table>
@@ -520,7 +520,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-10",
+                 "-12",
                  "-9",
                  "-7"
                ]
@@ -532,7 +532,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-6",
+                 "-7",
                  "-5",
                  "-3"
                ]
@@ -604,7 +604,7 @@
                "data":[
                  "61",
                  "59",
-                 "54"
+                 "55"
                ]
              },
              {
@@ -613,9 +613,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "33",
-                 "37",
-                 "43"
+                 "32",
+                 "36",
+                 "42"
                ]
              }
            ]
@@ -655,7 +655,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Dec  3 19:05:02 2018</p>
+         Last Run: Mon Dec  3 20:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 09, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
