--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Dec  4 03:05:02 2018</p>
+         Last Run: Tue Dec  4 04:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Dec 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Dec  4 03:05:02 2018</p>
+         Last Run: Tue Dec  4 04:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 17 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 08, 2018 - 10:35AM til 11:35AM</H4>
                <table class="table table-striped">
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Dec  4 03:05:02 2018</p>
+         Last Run: Tue Dec  4 04:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 09, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -615,6 +615,221 @@
                  "33",
                  "31",
                  "30"
+               ]
+             }
+           ]
+         };
+                  var options = {
+                     legend: {
+                         position: 'right'
+                     },
+                     scales: {
+                         xAxes: [{
+                             display: true,
+                             scaleLabel: {labelString: 'Date/Time', display: true},
+                             ticks: {
+                                 autoSkip: false
+                             }
+                         }],
+                         yAxes: [{
+                             display: true,
+                             scaleLabel: {labelString: 'Percentage (%)', display: true},
+                             ticks: {
+                                 beginAtZero: true
+                             }
+                         }]
+                     },
+                     tooltips: {
+                         mode: 'index'
+                     }
+                  };
+                  var MyNewChart = new Chart(ctx, {
+                     type: 'bar',
+                     data: data,
+                     options: options
+                  });
+               </script>
+         <hr style="border-width:5px ">
+      </div>
+      <div style="padding:10px;border: 1px none black">
+         <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
+         <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
+         Last Run: Tue Dec  4 04:05:02 2018</p>
+               <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
+               <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 10, 2018 -  9:15PM til 10:45PM</H4>
+               <table class="table table-striped">
+                  <thead>
+                     <tr>
+                        <th>Forecast Time</th>
+                        <th>Summary</th>
+                        <th>Temperture (°C)</th>
+                        <th>Feels Like (°C)</th>
+                        <th>POP (%)</th>
+                        <th>Humidity (%)</th>
+                        <th>UV</th>
+                        <th>Wind (km/hr)</th>
+                        <th>Wind Dir.</th>
+                        <th>Cloud Cover (%)</th>
+                     </tr>
+                  </thead>
+                  <tbody>
+                     <tr>
+                        <td>09:00 PM</td>
+                        <td>Partly Cloudy</td>
+                        <td>-4</td>
+                        <td>-9</td>
+                        <td>4</td>
+                        <td>75</td>
+                        <td>0</td>
+                        <td>13</td>
+                        <td>WSW</td>
+                        <td>44</td>
+                     </tr>
+                     <tr>
+                        <td>10:00 PM</td>
+                        <td>Partly Cloudy</td>
+                        <td>-4</td>
+                        <td>-9</td>
+                        <td>4</td>
+                        <td>75</td>
+                        <td>0</td>
+                        <td>13</td>
+                        <td>W</td>
+                        <td>44</td>
+                     </tr>
+                     <tr>
+                        <td>11:00 PM</td>
+                        <td>Partly Cloudy</td>
+                        <td>-5</td>
+                        <td>-10</td>
+                        <td>5</td>
+                        <td>78</td>
+                        <td>0</td>
+                        <td>13</td>
+                        <td>WSW</td>
+                        <td>44</td>
+                     </tr>
+                  </tbody>
+               </table>
+               </style>
+               <div class="container-fluid">
+               	<div class="row">
+               		<div class="col-xs-8" style="text-align:center"><canvas id="chartHTMLReportGenerator7"></canvas></div>
+               	</div>
+               </div>
+               <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
+               <script>
+                  var ctx = document.getElementById("chartHTMLReportGenerator7").getContext("2d");
+                  var data ={
+           "labels":[
+             "09:00 PM",
+             "10:00 PM",
+             "11:00 PM"
+           ],
+           "datasets":[
+             {
+               "label":"apparentTemperature",
+               "borderColor":"rgba(92,0,141,1)",
+               "borderWidth":2,
+               "pointColor":"rgba(92,0,141,1)",
+               "backgroundColor":"rgba(92,0,141,0)",
+               "data":[
+                 "-9",
+                 "-9",
+                 "-10"
+               ]
+             },
+             {
+               "label":"temperature",
+               "borderColor":"rgba(252,49,18,1)",
+               "borderWidth":2,
+               "pointColor":"rgba(252,49,18,1)",
+               "backgroundColor":"rgba(252,49,18,0)",
+               "data":[
+                 "-4",
+                 "-4",
+                 "-5"
+               ]
+             }
+           ]
+         };
+                  var options = {
+                     legend: {
+                         position: 'right'
+                     },
+                     scales: {
+                         xAxes: [{
+                             display: true,
+                             scaleLabel: {labelString: 'Date/Time', display: true},
+                             ticks: {
+                                 autoSkip: false
+                             }
+                         }],
+                         yAxes: [{
+                             display: true,
+                             scaleLabel: {labelString: 'Temp (C)', display: true},
+                             ticks: {
+                                 beginAtZero: false
+                             }
+                         }]
+                     },
+                     tooltips: {
+                         mode: 'index'
+                     }
+                  };
+                  var MyNewChart = new Chart(ctx, {
+                     type: 'line',
+                     data: data,
+                     options: options
+                  });
+               </script>
+               </style>
+               <div class="container-fluid">
+               	<div class="row">
+               		<div class="col-xs-8" style="text-align:center"><canvas id="chartHTMLReportGenerator8"></canvas></div>
+               	</div>
+               </div>
+               <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
+               <script>
+                  var ctx = document.getElementById("chartHTMLReportGenerator8").getContext("2d");
+                  var data ={
+           "labels":[
+             "09:00 PM",
+             "10:00 PM",
+             "11:00 PM"
+           ],
+           "datasets":[
+             {
+               "label":"precipProbability",
+               "borderColor":"rgba(0,0,255,1)",
+               "borderWidth":2,
+               "backgroundColor":"rgba(0,0,255,0.5)",
+               "data":[
+                 "4",
+                 "4",
+                 "5"
+               ]
+             },
+             {
+               "label":"humidity",
+               "borderColor":"rgba(40,177,255,1)",
+               "borderWidth":2,
+               "backgroundColor":"rgba(40,177,255,0.5)",
+               "data":[
+                 "75",
+                 "75",
+                 "78"
+               ]
+             },
+             {
+               "label":"cloudCover",
+               "borderColor":"rgba(233,37,255,1)",
+               "borderWidth":2,
+               "backgroundColor":"rgba(233,37,255,0.5)",
+               "data":[
+                 "44",
+                 "44",
+                 "44"
                ]
              }
            ]
